--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   app:
     container_name: swo_cli
@@ -18,7 +16,7 @@ services:
       context: .
       dockerfile: dev.Dockerfile
     working_dir: /swo
-    command: bash -c "ruff check . && pytest"
+    command: bash -c "ruff check . && mypy . && pytest"
     volumes:
       - .:/swo
 
