Fix coverage report for sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,9 +3,9 @@ sonar.organization=softwareone-mpt-github
 
 sonar.language=py
 
-sonar.sources=swo/mpt/cli
-sonar.tests=tests
-sonar.inclusions=swo/mpt/cli
+sonar.sources=./swo/mpt/cli
+sonar.tests=./tests
+sonar.inclusions=swo/mpt/cli/**
 sonar.exclusions=tests/**
 
 sonar.python.coverage.reportPaths=coverage.xml
