223929 Rename cli command from 'swocli' to 'mpt-cli'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ types-requests = "2.31.*"
 typing-extensions = "4.9.*"
 
 [tool.poetry.scripts]
-swocli = 'swo.mpt.cli.swocli:app'
+mpt-cli = 'swo.mpt.cli.swocli:app'
 
 [build-system]
 requires = ["poetry-core"]
