--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4"
+openpyxl = "3.1.*"
 pydantic = "2.7.*"
-pyfiglet = "^1.0.2"
+pyfiglet = "1.0.*"
 requests = "2.31.*"
 typer = "0.12.*"
 
