--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ openpyxl = "3.1.*"
 pydantic = "2.7.*"
 pyfiglet = "1.0.*"
 requests = "2.31.*"
+requests-toolbelt = "1.0.*"
 typer = "0.12.*"
 
 [tool.poetry.group.dev.dependencies]
