--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4"
+click = "8.1.8"
 openpyxl = "3.1.*"
 pydantic = "2.7.*"
 pyfiglet = "1.0.*"
