--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,30 +28,29 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4"
-click = "8.1.8"
 openpyxl = "3.1.*"
-pydantic = "2.7.*"
+pydantic = "2.11.*"
 pyfiglet = "1.0.*"
 requests = "2.32.*"
 requests-toolbelt = "1.0.*"
-typer = "0.12.*"
+typer = "0.15.*"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "0.13.*"
-ipython = "8.*"
-mypy = "1.8.*"
-poetry-plugin-sort = "0.2.*"
-pre-commit = "3.6.*"
-pytest = "7.4.*"
-pytest-cov = "4.1.*"
+ipython = "9.*"
+mypy = "1.15.*"
+poetry-plugin-sort = "0.3.*"
+pre-commit = "4.2.*"
+pytest = "8.3.*"
+pytest-cov = "6.1.*"
 pytest-deadfixtures = "2.2.*"
-pytest-mock = "3.12.*"
-pytest-randomly = "3.15.*"
-pytest-xdist = "3.5.*"
-responses = "0.24.*"
-ruff = "0.3.*"
+pytest-mock = "3.14.*"
+pytest-randomly = "3.16.*"
+pytest-xdist = "3.6.*"
+responses = "0.25.*"
+ruff = "0.11.*"
 types-requests = "2.31.*"
-typing-extensions = "4.9.*"
+typing-extensions = "4.13.*"
 
 [tool.poetry.scripts]
 mpt-cli = 'swo.mpt.cli.swocli:app'
@@ -87,22 +86,22 @@ include = [
 [tool.ruff]
 extend-exclude = [".vscode", ".devcontainer"]
 output-format = "full"
+line-length = 100
 
 [tool.ruff.lint]
 
 select = [
-    "E",  # w errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
+    "E",   # w errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
     "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade,
+    "UP",  # pyupgrade
     "PT",  # flake8-pytest-style
-    "T10",  # flake8-pytest-style
+    "T10", # flake8-debugger
 ]
 ignore = [
-    "PT004", # fixture '{name}' does not return anything, add leading underscore
     "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
     "B008",  # do not perform function calls in argument defaults
     "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
