--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ requests-toolbelt = "1.0.*"
 typer = "0.15.*"
 
 [tool.poetry.group.dev.dependencies]
+freezegun = "1.5.*"
 ipdb = "0.13.*"
 ipython = "9.*"
 mypy = "1.15.*"
