--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ python = ">=3.12,<4"
 openpyxl = "3.1.*"
 pydantic = "2.11.*"
 pyfiglet = "1.0.*"
+python-dateutil = "2.9.*"
 requests = "2.32.*"
 requests-toolbelt = "1.0.*"
 typer = "0.15.*"
@@ -50,6 +51,7 @@ pytest-randomly = "3.16.*"
 pytest-xdist = "3.6.*"
 responses = "0.25.*"
 ruff = "0.11.*"
+types-python-dateutil = "2.9.*"
 types-requests = "2.31.*"
 typing-extensions = "4.13.*"
 
