refactor: add services and related component for product creation

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.language=py
 sonar.sources=swo
 sonar.tests=tests
 sonar.inclusions=swo/**
-sonar.exclusions=tests/**
+sonar.exclusions=tests/**,**/__init__.py
 
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.xunit.reportPath=coverage.xml
