--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,29 +15,31 @@ jobs:
     timeout-minutes: 10
 
     steps:
-    - name: Checkout
+    - name: "Checkout"
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v4
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
+        python-version: "3.12"
 
-    - name: 'Get the version'
+    - name: "Install uv"
+      uses: astral-sh/setup-uv@v6
+      with:
+        version: "0.7.*"
+        enable-cache: true
+        cache-dependency-glob: uv.lock
+
+    - name: "Get the version"
       id: get_version
       run: echo  "VERSION=${GITHUB_REF/refs\/tags\//}" >> "$GITHUB_OUTPUT"
 
-    - name: Build and publish to PyPI
-      env:
-        PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+    - name: "Build"
       run: |
-        poetry version ${{ steps.get_version.outputs.VERSION }}
-        poetry build
-        if [ "$(curl -s -o /dev/null -w '%{http_code}' https://pypi.org/pypi/mpt-cli/${{ steps.tag.outputs.result }}/json)" = "404" ]; then poetry publish -u $PYPI_USERNAME -p $PYPI_PASSWORD; fi
+        uv version ${{ steps.get_version.outputs.VERSION }}
+        uv build
+
+    - name: "Publish to PyPI"
+      run: uv publish
