--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,7 @@ max-line-length = 100
 
 [tool.mypy]
 warn_no_return = false
-exclude = ['tests']
+exclude = ["tests"]
 plugins = ["pydantic.mypy"]
 
 [[tool.mypy.overrides]]
