MPT-11921 Bump ruff version to 0.12.*

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
     "pytest-randomly==3.16.*",
     "pytest-xdist==3.6.*",
     "responses==0.25.*",
-    "ruff==0.11.*",
+    "ruff==0.12.*",
     "types-python-dateutil==2.9.*",
     "types-requests==2.31.*",
     "typing-extensions==4.13.*",
@@ -117,8 +117,9 @@ select = [
 ]
 ignore = [
     "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
-    "B008",  # do not perform function calls in argument defaults
     "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
+    "UP046", # Doesn't properly work with ParamSpec and python 3.12
+    "UP047", # Doesn't properly work with ParamSpec and python 3.12
 ]
 
 [tool.ruff.lint.isort]
