--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev = [
     "pytest-xdist==3.6.*",
     "responses==0.25.*",
     "ruff==0.12.*",
+    "types-openpyxl==3.1.*",
     "types-python-dateutil==2.9.*",
     "types-requests==2.31.*",
     "typing-extensions==4.13.*",
@@ -138,13 +139,12 @@ plugins = ["pydantic.mypy"]
 explicit_package_bases = true
 
 [[tool.mypy.overrides]]
-module = "pyfiglet.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "gunicorn.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "openpyxl.*"
+module = [
+  "click.*",
+  "dependency_injector.*",
+  "gunicorn.*",
+  "pyfiglet.*",
+  "typer.*",
+  "rich.*"
+]
 ignore_missing_imports = true
