--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,11 @@ repos:
     hooks:
       - id: uv-lock
 
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.3.0
+    hooks:
+      - id: flake8
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.17.0
     hooks:
