fix: fix PTH123

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,6 +175,7 @@ ignore = [
   "PLR09",   # we have our own complexity rules
   "PLR2004", # do not report magic numbers
   "PLR6301", # do not require classmethod / staticmethod when self not used
+  "PLW1514", # conflict with PTH123 using Path().open()
   "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
   "TRY003",  # long exception messages from `tryceratops`
 ]
