--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
     "pytest-randomly==3.16.*",
     "pytest-xdist==3.6.*",
     "responses==0.25.*",
-    "ruff==0.12.*",
+    "ruff==0.12.11",  # force ruff version to have same formatting everywhere
     "types-openpyxl==3.1.*",
     "types-python-dateutil==2.9.*",
     "types-requests==2.31.*",
