--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,12 +78,9 @@ build-backend = "hatchling.build"
 [tool.pytest.ini_options]
 testpaths = "tests"
 pythonpath = "."
-addopts = "--cov=cli --cov-report=term-missing --cov-report=html --cov-report=xml --import-mode=importlib"
+addopts = "--cov=cli --cov-report=term-missing --cov-report=xml --import-mode=importlib"
 log_cli = false
-filterwarnings = [
-    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
-    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
-]
+filterwarnings = []
 markers = [
   "integration: marks test as integration tests",
 ]
@@ -98,31 +95,37 @@ exclude_also = [
     "if __name__ == \"__main__\":",
     "raise NotImplementedError",
 ]
-include = [
-    "cli/**",
-    "cli/plugins/audit_plugin/**",
-]
 omit = [
     "*/__init__.py"
 ]
 
 [tool.flake8]
+allowed-domain-names = ["result"]
 aaa_act_block_style = "large"
 doctests = true
 extend-ignore = ["WPS226"]
-extend-exclude = [".venv"]
+extend-exclude = [
+  ".coverage",
+  ".github",
+  ".idea",
+  ".mypy_cache",
+  ".pytest_cache",
+  ".ruff_cache",
+  "uv.lock",
+  ".venv"
+]
 format = "wemake"
 max-imports = 17
-max-line-length=100
+max-line-length = 100
 select = ["AAA", "E999", "WPS"]
 show-source = true
 statistics = false
+per-file-ignores = []
 
 [tool.ruff]
 # Ruff config: https://docs.astral.sh/ruff/settings
 preview = true
 target-version = "py312"
-extend-exclude = [".vscode", ".devcontainer"]
 output-format = "full"
 line-length = 100
 
