feat: add makefile and improve compose files

--- a/.github/workflows/pr-build-merge.yml
+++ b/.github/workflows/pr-build-merge.yml
@@ -24,10 +24,10 @@ jobs:
         fetch-depth: 0
 
     - name: "Build test containers"
-      run: docker compose build app_test
+      run: make build
 
     - name: "Run validation & test"
-      run: docker compose run --service-ports app_test
+      run: make check-all
 
     - name: "Run SonarCloud Scan"
       uses: SonarSource/sonarqube-scan-action@master
@@ -37,4 +37,4 @@ jobs:
 
     - name: "Stop containers"
       if: always()
-      run: docker compose down
+      run: make down
