--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.11
+    rev: v0.14.14
     hooks:
       - id: ruff-check
       - id: ruff-format
@@ -14,7 +14,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: no-commit-to-branch
-        args: [--pattern, '^release/.*']
+        args: [--pattern, "^release/.*"]
       - id: detect-private-key
 
   - repo: https://github.com/astral-sh/uv-pre-commit
@@ -26,13 +26,18 @@ repos:
     rev: 7.3.0
     hooks:
       - id: flake8
-        additional_dependencies: [Flake8-pyproject, Flake8-AAA, wemake-python-styleguide==1.3.*]
+        additional_dependencies:
+          [
+            Flake8-pyproject==1.2.*,
+            Flake8-AAA==0.17.*,
+            wemake-python-styleguide==1.5.*,
+          ]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.17.0
+    rev: v1.19.1
     hooks:
       - id: mypy
-        args: [ "--config-file=pyproject.toml", "." ]
+        args: ["--config-file=pyproject.toml", "."]
         pass_filenames: false
         additional_dependencies:
           - pydantic==2.11.*
