--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,12 @@ audit = "cli.plugins.audit_plugin.app:app"
 
 [dependency-groups]
 dev = [
-    "flake8-aaa>=0.17.2",
-    "flake8-pyproject>=1.2.3",
+    "flake8-aaa==0.17.*",
+    "flake8-pyproject==1.2.*",
     "freezegun==1.5.*",
     "ipdb==0.13.*",
     "ipython==9.*",
-    "mypy==1.15.*",
+    "mypy==1.19.*",
     "pre-commit==4.2.*",
     "pytest==8.3.*",
     "pytest-cov==6.1.*",
@@ -57,12 +57,12 @@ dev = [
     "pytest-randomly==3.16.*",
     "pytest-xdist==3.6.*",
     "responses==0.25.*",
-    "ruff==0.12.11", # force ruff version to have same formatting everywhere
+    "ruff==0.14.14", # force ruff version to have same formatting everywhere
     "types-openpyxl==3.1.*",
     "types-python-dateutil==2.9.*",
     "types-requests==2.31.*",
     "typing-extensions==4.13.*",
-    "wemake-python-styleguide==1.3.*",
+    "wemake-python-styleguide==1.5.*",
 ]
 
 [tool.hatch.build.targets.sdist]
@@ -198,12 +198,19 @@ ignore = [
 external = [ "AAA", "WPS" ]
 
 # Plugin configs:
-flake8-import-conventions.banned-from = [ "ast", "datetime" ]
-flake8-import-conventions.aliases = { datetime = "dt" }
-flake8-quotes.inline-quotes = "double"
-mccabe.max-complexity = 6
-pydocstyle.convention = "google"
-pydocstyle.ignore-decorators = ["property"]
+[tool.ruff.lint.flake8-import-conventions]
+banned-from = ["ast", "datetime"]
+aliases = { datetime = "dt" }
+
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "double"
+
+[tool.ruff.lint.mccabe]
+max-complexity = 6
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+ignore-decorators = ["property"]
 
 
 [tool.ruff.lint.per-file-ignores]
