--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "2.0.0"
 description = "Command line utility for SoftwareOne Marketplace Platform"
 authors = [{ name = "SoftwareOne AG" }]
 requires-python = ">=3.12,<4"
-readme = "README.md"
+readme = "docs/PROJECT_DESCRIPTION.md"
 license = {text = "Apache-2.0 license"}
 keywords = [
     "fulfillment",
