--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,7 +121,10 @@ select = ["AAA", "E999", "WPS"]
 show-source = true
 statistics = false
 per-file-ignores = [
-  "*.py:WPS202,WPS203,WPS204,WPS210,WPS211,WPS213,WPS214,WPS218,WPS221,WPS229,WPS231,WPS232,WPS234,WPS235,WPS237,WPS300,WPS322,WPS327,WPS332,WPS335,WPS336,WPS338,WPS339,WPS342,WPS347,WPS349,WPS400,WPS402,WPS404,WPS407,WPS410,WPS412,WPS420,WPS430,WPS432,WPS441,WPS458,WPS459,WPS462,WPS471,WPS478,WPS504,WPS518,WPS519,WPS529,WPS601,WPS602,WPS604",
+  "*.py:WPS203,WPS204,WPS210,WPS211,WPS213,WPS214,WPS218,WPS221,WPS229,WPS231,WPS232,WPS234,WPS235,WPS237,WPS300,WPS322,WPS327,WPS332,WPS335,WPS336,WPS338,WPS339,WPS342,WPS347,WPS349,WPS400,WPS402,WPS404,WPS407,WPS410,WPS412,WPS420,WPS430,WPS432,WPS441,WPS458,WPS459,WPS462,WPS471,WPS478,WPS504,WPS518,WPS519,WPS529,WPS601,WPS602,WPS604",
+  "cli/core/mpt/models.py:WPS202",
+  "tests/*.py:WPS202,WPS203,WPS204,WPS210,WPS211,WPS213,WPS214,WPS218,WPS221,WPS229,WPS231,WPS232,WPS234,WPS235,WPS237,WPS300,WPS322,WPS327,WPS332,WPS335,WPS336,WPS338,WPS339,WPS342,WPS347,WPS349,WPS400,WPS402,WPS404,WPS407,WPS410,WPS412,WPS420,WPS430,WPS432,WPS441,WPS458,WPS459,WPS462,WPS471,WPS478,WPS504,WPS518,WPS519,WPS529,WPS601,WPS602,WPS604",
+  "tests/**/*.py:WPS202,WPS203,WPS204,WPS210,WPS211,WPS213,WPS214,WPS218,WPS221,WPS229,WPS231,WPS232,WPS234,WPS235,WPS237,WPS300,WPS322,WPS327,WPS332,WPS335,WPS336,WPS338,WPS339,WPS342,WPS347,WPS349,WPS400,WPS402,WPS404,WPS407,WPS410,WPS412,WPS420,WPS430,WPS432,WPS441,WPS458,WPS459,WPS462,WPS471,WPS478,WPS504,WPS518,WPS519,WPS529,WPS601,WPS602,WPS604",
 ]
 
 [tool.ruff]
